--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Banana Bread</h1>
 
-    <img src="../images/bananabread.jpg" alt="Picture of Banana Bread">
+    <img src="../images/bananabread.jpeg" alt="Picture of Banana Bread">
 
     <p>Pictured is a sweet bread made with ripened bananas.</p>
 
@@ -35,5 +35,7 @@
         <li>Pour the batter into your prepared loaf pan. Bake for 55 to 65 minutes at 350°F (175°C), or until a toothpick or wooden skewer inserted into the center comes out clean. A few dry crumbs are okay; streaks of wet batter are not. If the outside of the loaf is browned but the center is still wet, loosely tent the loaf with foil and continue baking until the loaf is fully baked.</li>
         <li>Remove from oven and let cool in the pan for a few minutes. Then remove the banana bread from the pan and let cool completely before serving. Slice and serve. (A bread knife helps to make slices that aren't crumbly.) Wrapped well, the banana bread will keep at room temperature for 4 days. For longer storage, refrigerate the loaf up to 5 days, or freeze it.</li>
     </ol>
+
+    <a href="../index.html">Home</a>
 </body>
 </html>
