--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../recipes/bananabread.html">Banana Bread</a>
+    <a href="../odin-recipes/recipes/bananabread.html">Banana Bread</a>
 </body>
 </html>
