--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe Book</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/bananabread.html">Banana Bread</a>
+    <ul>
+        <li><a href="../odin-recipes/recipes/bananabread.html">Banana Bread</a></li>
+        <li><a href="../odin-recipes/recipes/fruitpizza.html">Fruit Pizza</a></li>
+        <li><a href="../odin-recipes/recipes/pineappleupsidedowncake.html">Pineapple Upsidedown Cake</a></li>
+    </ul>
 </body>
 </html>
