Linked styles.css to all pages in repo and added a basic list of styles to the style sheet to make the pages more appealing to the eye.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="main">
         <li><a href="../odin-recipes/recipes/bananabread.html">Banana Bread</a></li>
         <li><a href="../odin-recipes/recipes/fruitpizza.html">Fruit Pizza</a></li>
         <li><a href="../odin-recipes/recipes/pineappleupsidedowncake.html">Pineapple Upsidedown Cake</a></li>
