--- a/recipes/fruitpizza.html
+++ b/recipes/fruitpizza.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Pizza</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     
@@ -12,7 +13,7 @@
 
     <img src="../images/fruitpizza.jpeg">
 
-    <p> Pictured is a slice of fruit pizza.</p>
+    <p class="caption"> Pictured is a slice of fruit pizza.</p>
 
     <h2>Ingredients</h2>
 
