Added missing class to pinappleupsidedowncake.html

--- a/recipes/pineappleupsidedowncake.html
+++ b/recipes/pineappleupsidedowncake.html
@@ -12,7 +12,7 @@
 
     <img src="../images/pineappleupsidedowncake.jpeg">
 
-    <p>An example picture of Pineapple Upsidedown Cake</p>
+    <p class="caption">An example picture of Pineapple Upsidedown Cake</p>
 
     <h2>Ingredients</h2>
 
